--- a/package.json
+++ b/package.json
@@ -18,15 +18,25 @@
     "react-admin-firebase": "3",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-seo-meta-tags": "^1.2.1",
+    "serve": "^12.0.0",
+    "web-vitals": "^1.0.1",
+    "workbox-cacheable-response": "^6.2.4",
+    "workbox-core": "^6.2.4",
+    "workbox-expiration": "^6.2.4",
+    "workbox-precaching": "^6.2.4",
+    "workbox-routing": "^6.2.4",
+    "workbox-strategies": "^6.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "serve": "serve -s build",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
